# iarc_archive

./: config.txt
iarc_world/: CMakeLists.txt  hover-uav.sh  move-test.sh  move-uav.sh  package.xml  readme  urdf.vicg
iarc_world/launch/: world.launch  xacrodisplay.launch
iarc_world/uav_description/: iarc_uav.gv  test_conversion.sdf  uav.gazebo  uav.urdf  uav.xacro
iarc_world/worlds/: iarc-aa.world  iarc-main.world  iarc.world  iarc_complex.world  iarc_main.world
iarc_world_run/: CMakeLists.txt  package.xml
iarc_world_run/launch/: record.launch
iarc_world_run/src/: '  .sub.cpp.swo  README  game.cpp  game_run.cpp  main.h  sub.cpp  sub.cpp.old
image_trans_and_pub/: CMakeLists.txt  package.xml  readme.txt
image_trans_and_pub/include/: Decoder.h  common.h  config.h  imagetransfer.h  log.h  usb.h
image_trans_and_pub/src/: Decoder.cpp  common.cpp  config.cpp  imagetransfer.cpp  log.cpp  main.cpp  usb.cpp
improc_and_localization/: CMakeLists.txt  package.xml
improc_and_localization/src/: .main.cpp.swp  main.cpp
irobot_tracker/: CMakeLists.txt  README  asi_cam_param.xml  package.xml
irobot_tracker/include/irobot_tracker/: PlainBase.h  PlainBase.h~  pid.h
irobot_tracker/launch/: my.launch
irobot_tracker/msg/: .trackerDebug.msg.swp
irobot_tracker/src/: PlainBase.cpp  PlainBase_modied.cpp  PlainBase_old (copy).cpp  PlainBase_old.cpp~  tracker_debug_plot.cpp
rviz_plugin/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rviz_plugin/include/rviz_plugin/: PlainBase.h
rviz_plugin/msg/: UAV.msg
rviz_plugin/src/: PlainBase.cpp  PlainBase.cpp~  PlainBase.h~  Rviz_plugin_test1.cpp  Rviz_plugin_test2.cpp  Rviz_plugin_test2.cpp~  plain1.cpp  plain1.cpp~  plainmod.cpp  plainmod.cpp~  plainmod2.cpp~
serial_to_uav/: CMakeLists.txt
