<?xml version="1.0"?>
<package>
  <name>image_trans_and_pub</name>
  <version>0.1.0</version>
  <description>The image transfer and publish package</description>

  <maintainer email="iarc@todo.todo">iarc</maintainer>
  <license>BSD</license>
  <author email="catherineliu1994@gmail.com">Catherine Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>

