<package>
  <name>improc_and_localization</name>
  <version>0.1.0</version>
  <description>Image processing and localization</description>

  <maintainer email="iarc@todo.todo">iarc</maintainer>
  <license>BSD</license>
  <author email="catherineliu1994@gmail.com">Catherine Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_filters</run_depend>

</package>

